# py-xboto

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg
1.0.0/: 404.html  changelog.html  index.html
1.0.0/api/xboto/: index.html
1.0.0/api/xinject/: dependency.html
1.0.0/search/: search_index.json
1.0.1/: changelog.html
1.0.1/search/: search_index.json
1.0.2/: changelog.html  index.html
1.0.2/search/: search_index.json
1.1.0/: changelog.html  index.html
1.1.0/search/: search_index.json
1.1.1/: changelog.html  index.html  sitemap.xml
1.1.1/api/xboto/: dependencies.html  index.html  resource.html
1.1.1/search/: search_index.json
docs/: changelog.md  index.md  resources.md
examples/: basic_usage.py  dynamodb_encoder.py  mixin_usage.py
latest/: changelog.html  index.html
latest/api/xboto/: client.html  dependencies.html  index.html
scripts/: tryout.py
tests/: conftest.py  test_endpoint_url.py  test_proxy.py
xboto/: __init__.py  client.py  dependencies.py  resource.py
