[tool.poetry]
name = "xboto"
version = "1.1.1"
description = "Easy lazy dependency injection for boto3 clients/resources."
authors = ["Josh Orr <josh@orr.blue>"]
packages = [{include = "xboto"}]
readme = "README.md"
repository = "https://github.com/xyngular/py-xboto"
keywords = ["boto", "boto client", "boto resource", "inject", "lazy", "dependency", "dependency injection", "aws"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: The Unlicense (Unlicense)"
]

[tool.poetry.dependencies]
python = "^3.8"
xinject = "^1.4.0"
boto3 = "^1.26.64"
botocore = "^1.29.64"
xsentinels = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
pdoc3 = "^0"
pytest = "^7.1.3"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.3.0"
black = { version = "*", allow-prereleases = true }
moto = { version = "^4.0.3", extras = ["dynamodb2", "ssm"] }
pyright = "^1.1.272"
py = "^1.11.0"
boto3-stubs = { extras = ["essential"], version = "^1.25.3" }
mkdocstrings = { extras = ["python"], version = "^0" }
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
mkdocs-autorefs = "^0"
mike = "^1.1.2"
mkdocs-git-revision-date-plugin = "^0.3.2"
tomlkit = "^0.11.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.custom.xpublish]
extra-module-docs = ['xsentinels', 'xinject']

[[tool.poetry.source]]
url = "https://pypi.fury.io/xyngular"
name = "gemfury"

[tool.pyright]
include = "xboto"

[tool.black]
line-length = 99
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
